feat:ファイルを簡潔に修正

--- a/public/Plateau-View/index.html
+++ b/public/Plateau-View/index.html
@@ -10,7 +10,7 @@
   <link rel="preconnect" href="https://api.maptiler.com">
 
   <!-- 外部CSS -->
-  <link rel="stylesheet" href="./css/styles.css" />
+  <link rel="stylesheet" href="./styles.css" />
 
   <!-- MapLibre & deck.gl（グローバル） -->
   <script src="https://unpkg.com/maplibre-gl@3.6.2/dist/maplibre-gl.js"></script>
