--- a/public/RSSI-Measurement/index-rssi.html
+++ b/public/RSSI-Measurement/index-rssi.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>RSSI × 時刻（Excel保存 / 名前ごとにシート分割 + 距離 + 押下マーク）</title>
-  <link rel="stylesheet" href="./css/styles-rssi.css" />
+  <link rel="stylesheet" href="./styles-rssi.css" />
 </head>
 <body>
   <header>
