--- a/public/Plateau-View/index.html
+++ b/public/Plateau-View/index.html
@@ -10,8 +10,7 @@
   <link rel="preconnect" href="https://api.maptiler.com">
 
   <!-- 外部CSS -->
-  <link rel="stylesheet" href="./styles.css" />
-
+  <link rel="stylesheet" href="/Plateau-View/styles.css" />
   <!-- MapLibre & deck.gl（グローバル） -->
   <script src="https://unpkg.com/maplibre-gl@3.6.2/dist/maplibre-gl.js"></script>
   <link href="https://unpkg.com/maplibre-gl@3.6.2/dist/maplibre-gl.css" rel="stylesheet"/>
@@ -46,6 +45,6 @@
     <div id="bus-list"></div>
   </div>
 
-  <script type="module" src="./js/app.js"></script>
+  <script type="module" src="/Plateau-View/js/app.js"></script>
 </body>
 </html>
